Some z-index toying to make sure dropdown menu doesn't hide behind side panels.

--- a/client/stylesheets/global.less
+++ b/client/stylesheets/global.less
@@ -221,7 +221,7 @@ header {
       position: absolute;
       margin: 0px;
       top: 100%;
-      z-index: -1;
+      z-index: 1001;
       min-width: 190px;
       font-size: 14px;
       list-style: none;
