--- a/client/views/desk/desk.less
+++ b/client/views/desk/desk.less
@@ -73,7 +73,7 @@ div[id^='editorWindow-'] {
   height: calc(~"100% - 84px");
   right: -300px;
   width: 300px;
-  z-index: 99999;
+  z-index: 2;
   background: #fff;
   padding: 8px;
   .transition(all 0.2s ease);
@@ -107,7 +107,7 @@ div[id^='editorWindow-'] {
   width: 350px;
   top: 30px;
   height: calc(~'100% - 30px');
-  z-index: 99999;
+  z-index: 2;
   background: #fff;
   padding: 8px 15px 8px 8px;
   .transition(all 0.2s ease);
